# esp32-bluetooth-rc-car

./: .gitignore  README.md
Nintendo_Switch_Controller/: Nintendo_Switch.ipynb
dune-buggy/esp32-bluetooth-rc-car/: platformio.ini
dune-buggy/esp32-bluetooth-rc-car/src/: main.cpp
esp32-bluetooth-rc-car/: platformio.ini
esp32-bluetooth-rc-car/lib/DFRobot_Fermion/: DFRobot_Fermion.h
esp32-bluetooth-rc-car/src/: main.cpp
esp_hid_host/: sdkconfig
esp_hid_host/components/bluepad32/: CMakeLists.txt  nintendo_switch_controller.c  uni_hid_parser_switch.c
esp_hid_host/components/brushed_dc_motor/: dc_motor.c
esp_hid_host/components/esp_hid_gap/: CMakeLists.txt  esp_hid_gap.c  hid.c
esp_hid_host/main/: CMakeLists.txt  esp_hid_host_main.c
hardware/: .gitignore
hardware/NewBrightCo_2015_Corvette/: Assembly.OutJob  Documentation.OutJob  Fabrication_GBR.OutJob  Fabrication_ODB.OutJob  NBRCOR.SchDoc  NewBrightCo_2015_Corvette.BomDoc  NewBrightCo_2015_Corvette.PrjPcb  TechDoc.ipynb  TestReport_E1.00.ipynb
mcpwm_bdc_speed_control/: sdkconfig
mcpwm_bdc_speed_control/main/: mcpwm_bdc_control_example_main.c
new-bright-corvette/Nintendo_Switch_Controller/: Nintendo_Switch.ipynb
new-bright-corvette/esp32-new-bright-corvette/: platformio.ini
new-bright-corvette/esp32-new-bright-corvette/src/: main.cpp
new-bright-corvette/esp_hid_host/: CMakeLists.txt  sdkconfig  sdkconfig.old
new-bright-corvette/esp_hid_host/main/: BluetoothController.cpp  Button.c  Button.cpp  CMakeLists.txt  LED.cpp  Motors.cpp  NonVolatileStorage.cpp  ThrustMotor.cpp  esp_hid_host_main.c  esp_hid_host_main.cpp  idf_component.yml
new-bright-corvette/esp_hid_host/main/include/: BluetoothController.h  Button.h  LED.h  Motors.h  NonVolatileStorage.h  SteerMotor.h  ThrustMotor.h  pins.h
new-bright-corvette/firmware/: CMakeLists.txt
new-bright-corvette/firmware/main/: BluetoothController.cpp  Button.cpp  CMakeLists.txt  SteerMotor.cpp  idf_component.yml
new-bright-corvette/mcpwm_bdc_speed_control/: .gitignore  sdkconfig
(+28 files in other folders)
